@@ -1,30 +1,23 @@
 package de.keksuccino.spiffyhud.customization.placeholders;
 
-import de.keksuccino.spiffyhud.mixin.MixinCache;
 import de.keksuccino.fancymenu.customization.placeholder.DeserializedPlaceholderString;
 import de.keksuccino.fancymenu.customization.placeholder.Placeholder;
-import de.keksuccino.konkrete.input.StringUtils;
+import de.keksuccino.fancymenu.util.LocalizationUtils;
+import de.keksuccino.spiffyhud.util.player.CameraRotationObserver;
 import net.minecraft.client.resources.language.I18n;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import java.util.Arrays;
 import java.util.List;
 
-public class GameLoadingProgressPercentPlaceholder extends Placeholder {
+public class CameraRotationDeltaXPlaceholder extends Placeholder {
 
-    public GameLoadingProgressPercentPlaceholder() {
-        super("game_loading_progress");
-    }
-
-    @Override
-    public @Nullable List<String> getAlternativeIdentifiers() {
-        return List.of("drippy_gl_percent");
+    public CameraRotationDeltaXPlaceholder() {
+        super("camera_rotation_delta_x");
     }
 
     @Override
     public String getReplacementFor(DeserializedPlaceholderString dps) {
-//        return "" + (int)(MixinCache.cachedCurrentLoadingScreenProgress * 100.0F);
-        return "";
+        return String.valueOf(CameraRotationObserver.getCurrentRotationDeltaX());
     }
 
     @Override
@@ -34,17 +27,17 @@ public class GameLoadingProgressPercentPlaceholder extends Placeholder {
 
     @Override
     public @NotNull String getDisplayName() {
-        return I18n.get("drippyloadingscreen.placeholders.general.loading_progress_percent");
+        return I18n.get("spiffyhud.placeholders.camera_rotation_delta_x");
     }
 
     @Override
     public List<String> getDescription() {
-        return Arrays.asList(StringUtils.splitLines(I18n.get("drippyloadingscreen.placeholders.general.loading_progress_percent.desc"), "\n"));
+        return List.of(LocalizationUtils.splitLocalizedStringLines("spiffyhud.placeholders.camera_rotation_delta_x.desc"));
     }
 
     @Override
     public String getCategory() {
-        return I18n.get("fancymenu.fancymenu.editor.dynamicvariabletextfield.categories.client");
+        return I18n.get("fancymenu.placeholders.categories.world");
     }
 
     @Override
